--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,8 +43,8 @@ jobs:
       - name: Setup Docker buildx🛠️
         uses: docker/setup-buildx-action@v3.11.1
         with:
-          version: v0.28.0
-          driver-opts: image=moby/buildkit:v0.24.0-rootless
+          version: v0.29.0
+          driver-opts: image=moby/buildkit:v0.25.0-rootless
 
       - name: Log into GHCR🔑
         uses: docker/login-action@v3.5.0
@@ -65,11 +65,11 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           labels: |
-            description="Distroless NGINX built with QUIC and HTTP/3 support🚀"
+            description="Distroless NGINX with HTTP/3, QUIC and PQC support🚀"
             maintainer="ammnt <admin@msftcnsi.com>"
-            org.opencontainers.image.description="Distroless NGINX built with QUIC and HTTP/3 support🚀"
+            org.opencontainers.image.description="Distroless NGINX with HTTP/3, QUIC and PQC support🚀"
             org.opencontainers.image.authors="ammnt, admin@msftcnsi.com"
-            org.opencontainers.image.title="Distroless NGINX built with QUIC and HTTP/3 support🚀"
+            org.opencontainers.image.title="Distroless NGINX with HTTP/3, QUIC and PQC support🚀"
             org.opencontainers.image.source="https://github.com/ammnt/nginx/"
             org.opencontainers.image.created=${{ env.BUILD_DATE }}
             org.opencontainers.image.documentation="https://github.com/ammnt/nginx/blob/main/README.md"
