--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -157,11 +157,11 @@ COPY --from=builder /usr/local/lib/libz.so.1.3.1.zlib-ng /usr/local/lib/libz.so.
 ENTRYPOINT [ "/sbin/tini", "--" ]
 
 EXPOSE 8080/tcp 8443/tcp 8443/udp
-LABEL description="Distroless NGINX built with QUIC and HTTP/3 support🚀" \
+LABEL description="Distroless NGINX with HTTP/3, QUIC and PQC support🚀" \
       maintainer="ammnt <admin@msftcnsi.com>" \
-      org.opencontainers.image.description="Distroless NGINX built with QUIC and HTTP/3 support🚀" \
+      org.opencontainers.image.description="Distroless NGINX with HTTP/3, QUIC and PQC support🚀" \
       org.opencontainers.image.authors="ammnt, admin@msftcnsi.com" \
-      org.opencontainers.image.title="Distroless NGINX built with QUIC and HTTP/3 support🚀" \
+      org.opencontainers.image.title="Distroless NGINX with HTTP/3, QUIC and PQC support🚀" \
       org.opencontainers.image.source="https://github.com/ammnt/nginx/" \
       org.opencontainers.image.created=${BUILD_DATE} \
       org.opencontainers.image.documentation="https://github.com/ammnt/nginx/blob/main/README.md" \
