--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -23,6 +23,7 @@ RUN set -ex \
     build-base \
     ca-certificates \
     linux-headers \
+    netcat-openbsd \
 && update-ca-certificates && cd /tmp \
 && git clone --depth 1 --recursive --single-branch -b "release-${APP_VERSION}" https://github.com/nginx/nginx && rm -rf /tmp/nginx/docs/html/* \
 && sed -i -e 's@"nginx/"@" "@g' /tmp/nginx/src/core/nginx.h \
@@ -141,6 +142,7 @@ FROM scratch
 COPY --from=builder /etc/passwd /etc/passwd
 COPY --from=builder /etc/group /etc/group
 COPY --from=builder /sbin/tini /sbin/tini
+COPY --from=builder /usr/bin/nc /usr/bin/nc
 COPY --from=builder --chown=nginx:nginx /usr/sbin/nginx /usr/sbin/nginx
 COPY --from=builder --chown=nginx:nginx /etc/nginx /etc/nginx
 COPY --from=builder --chown=nginx:nginx /tmp/error.log /tmp/error.log
@@ -151,8 +153,10 @@ COPY --from=builder /lib/ld-musl-x86_64.so.1 /lib/
 COPY --from=builder /usr/lib/libbrotlienc.so.1 \
                     /usr/lib/libxml2.so.2 \
                     /usr/lib/libbrotlicommon.so.1 \
+                    /usr/lib/libmd.so.0 \
+                    /usr/lib/libbsd.so.0 \
                     /usr/lib/liblzma.so.5 /usr/lib/
-COPY --from=builder /usr/local/lib/libz.so.1.3.1.zlib-ng /usr/local/lib/libz.so.1
+COPY --from=builder /usr/local/lib/libz.so.1 /usr/local/lib/libz.so.1
 
 ENTRYPOINT [ "/sbin/tini", "--" ]
 
@@ -168,6 +172,9 @@ LABEL description="Distroless NGINX with HTTP/3, QUIC and PQC support🚀" \
       org.opencontainers.image.licenses="BSD-2-Clause License" \
       org.opencontainers.image.url="https://msftcnsi.com" \
       org.opencontainers.image.version=${APP_VERSION}
+
+HEALTHCHECK --interval=10s --timeout=3s --start-period=5s --retries=2 \
+  CMD ["/usr/bin/nc", "-z", "-w", "1", "127.0.0.1", "8080"]
 
 STOPSIGNAL SIGQUIT
 USER nginx
