--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -132,8 +132,9 @@ jobs:
           tar xvzf dive_0.13.1_linux_amd64.tar.gz -C /usr/local/bin
           dive --ci-config "${{ github.workspace }}/.dive-ci/" ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           docker run -d --name nginx --rm -p 127.0.0.1:8080:8080/tcp ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
-          docker logs -t nginx
+          docker ps -a
           curl -v http://127.0.0.1:8080 || exit 1
+          docker logs -t angie
           pwd ; ls -la
 
       - name: Analyze image with Docker Scout💊
