--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -134,7 +134,7 @@ jobs:
           docker run -d --name nginx --rm -p 127.0.0.1:8080:8080/tcp ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           docker ps -a
           curl -v http://127.0.0.1:8080 || exit 1
-          docker logs -t angie
+          docker logs -t nginx
           pwd ; ls -la
 
       - name: Analyze image with Docker Scout💊
