--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -14,7 +14,6 @@ RUN set -e \
     make \
     git \
     mimalloc2-dev \
-    tini \
     build-base \
     ca-certificates \
     linux-headers \
@@ -45,65 +44,46 @@ RUN set -e \
 && sed -i "s/compat=0/compat=1/" /tmp/zlib-ng/configure && cd /tmp/zlib-ng && ./configure --zlib-compat \
 && make && make install && cd /tmp/nginx \
 && ./auto/configure \
-    --prefix=/etc/nginx \
-    --sbin-path=/usr/sbin/nginx \
-    --user=nginx \
-    --group=nginx \
-    --http-log-path=/dev/stdout \
-    --error-log-path=/dev/stderr \
-    --conf-path=/etc/nginx/nginx.conf \
-    --pid-path=/tmp/nginx.pid \
-    --lock-path=/tmp/nginx.lock \
-    --http-client-body-temp-path=/tmp/client_temp \
-    --http-proxy-temp-path=/tmp/proxy_temp \
-    --http-fastcgi-temp-path=/tmp/fastcgi_temp \
+    --prefix="/etc/nginx" \
+    --sbin-path="/usr/sbin/nginx" \
+    --user="nginx" \
+    --group="nginx" \
+    --http-log-path="/dev/stdout" \
+    --error-log-path="/dev/stderr" \
+    --conf-path="/etc/nginx/nginx.conf" \
+    --pid-path="/tmp/nginx.pid" \
+    --lock-path="/tmp/nginx.lock" \
+    --http-client-body-temp-path="/tmp/client_temp" \
+    --http-proxy-temp-path="/tmp/proxy_temp" \
+    --http-fastcgi-temp-path="/tmp/fastcgi_temp" \
     --with-openssl="/tmp/openssl" \
-    --with-openssl-opt=enable-ec_nistp_64_gcc_128 \
-    --with-openssl-opt=no-ssl2 \
-    --with-openssl-opt=no-ssl3 \
-    --with-openssl-opt=no-shared \
-    --with-openssl-opt=no-weak-ssl-ciphers \
-    --with-openssl-opt=no-tls-deprecated-ec \
-    --with-openssl-opt=enable-quic \
-    --with-openssl-opt=enable-ktls \
+    --with-openssl-opt="enable-ec_nistp_64_gcc_128" \
+    --with-openssl-opt="no-ssl2" \
+    --with-openssl-opt="no-ssl3" \
+    --with-openssl-opt="no-shared" \
+    --with-openssl-opt="no-weak-ssl-ciphers" \
+    --with-openssl-opt="no-tls-deprecated-ec" \
+    --with-openssl-opt="enable-quic" \
+    --with-openssl-opt="enable-ktls" \
     --with-pcre="/tmp/pcre2" \
     --with-zlib="/tmp/zlib-ng" \
-    --with-cpu-opt="generic" \
     --with-cc-opt="-static -static-libgcc" \
     --with-ld-opt="-static" \
     --with-cc-opt="-O2" \
-    --with-cc-opt="-march=native" \
-    --with-cc-opt="-falign-functions=32" \
-    --with-cc-opt="-flto" \
+    --with-cc-opt="-fhardened" \
+    --with-cc-opt="-D_FORTIFY_SOURCE=3" \
+    --with-cc-opt="-D_GLIBCXX_ASSERTIONS" \
+    --with-cc-opt="-ftrivial-auto-var-init=zero" \
+    --with-cc-opt="-Wl,-z,relro,-z,now" \
     --with-cc-opt="-fstack-protector-strong" \
-    --with-cc-opt="-param=ssp-buffer-size=4" \
-    --with-cc-opt="-Wimplicit-fallthrough=0" \
+    --with-cc-opt="-fstack-clash-protection" \
+    --with-cc-opt="-fcf-protection=full" \
     --with-cc-opt="-Wformat" \
     --with-cc-opt="-Wformat-security" \
     --with-cc-opt="-Werror=format-security" \
     --with-cc-opt="-fcode-hoisting" \
     --with-cc-opt="-Wno-deprecated-declarations" \
-    --with-cc-opt="-fhardened" \
-    --with-cc-opt="-D_FORTIFY_SOURCE=3" \
-    --with-cc-opt="-D_GLIBCXX_ASSERTIONS" \
-    --with-cc-opt="-ftrivial-auto-var-init=zero" \
-    --with-cc-opt="-fcf-protection=full" \
     --with-cc-opt="-DTCP_FASTOPEN=23" \
-    --with-cc-opt="-fPIE" \
-    --with-cc-opt="-fno-semantic-interposition" \
-    --with-cc-opt="-fno-plt" \
-    --with-cc-opt="-std=c11" \
-    --with-cc-opt="-fstack-clash-protection" \
-    --with-cc-opt="-fdata-sections" \
-    --with-cc-opt="-ffunction-sections" \
-    --with-ld-opt="-s" \
-    --with-ld-opt="-lrt" \
-    --with-ld-opt="-lmimalloc" \
-    --with-ld-opt="-lpcre" \
-    --with-ld-opt="-Wl,-z,relro" \
-    --with-ld-opt="-Wl,-z,now" \
-    --with-ld-opt="-pie" \
-    --with-ld-opt="-Wl,--gc-sections" \
     --with-compat \
     --with-pcre-jit \
     --with-threads \
@@ -134,23 +114,20 @@ RUN set -e \
     --without-mail_pop3_module \
     --without-mail_imap_module \
     --without-mail_smtp_module \
-    --add-module=/tmp/ngx_brotli \
+    --add-module="/tmp/ngx_brotli" \
 && make -j $(nproc) && make install && make clean && strip --strip-all /usr/sbin/nginx \
+&& file /usr/sbin/nginx && ldd /usr/sbin/nginx || true \
 && chown -R nginx:nginx /etc/nginx && chmod -R g+w /etc/nginx \
 && upx --best --lzma /usr/sbin/nginx && rm -rf /tmp/*
 
 FROM scratch
 COPY --from=builder /etc/passwd /etc/passwd
 COPY --from=builder /etc/group /etc/group
-COPY --from=builder /sbin/tini /sbin/tini
 COPY --from=builder /tmp /tmp
 COPY --from=builder --chown=nginx:nginx /usr/sbin/nginx /usr/sbin/nginx
 COPY --from=builder --chown=nginx:nginx /etc/nginx /etc/nginx
 COPY --chown=nginx:nginx ./nginx.conf /etc/nginx/nginx.conf
 COPY --chown=nginx:nginx ./default.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder /lib/ld-musl-x86_64.so.1 /lib/
-
-ENTRYPOINT [ "/sbin/tini", "--" ]
 
 EXPOSE 8080/tcp 8443/tcp 8443/udp
 LABEL description="Distroless NGINX with HTTP/3, QUIC and PQC support🚀" \
