chore: remove unnecessary dependencies and streamline Dockerfile configuration

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -70,6 +70,7 @@ RUN set -e \
     --with-cc-opt="-static -static-libgcc" \
     --with-ld-opt="-static" \
     --with-cc-opt="-O2" \
+    --with-cc-opt="-march=native" \
     --with-cc-opt="-fhardened" \
     --with-cc-opt="-D_FORTIFY_SOURCE=3" \
     --with-cc-opt="-D_GLIBCXX_ASSERTIONS" \
@@ -116,7 +117,6 @@ RUN set -e \
     --without-mail_smtp_module \
     --add-module="/tmp/ngx_brotli" \
 && make -j $(nproc) && make install && make clean && strip --strip-all /usr/sbin/nginx \
-&& file /usr/sbin/nginx && ldd /usr/sbin/nginx || true \
 && chown -R nginx:nginx /etc/nginx && chmod -R g+w /etc/nginx \
 && upx --best --lzma /usr/sbin/nginx && rm -rf /tmp/*
 
