--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -14,6 +14,7 @@ RUN set -e \
     make \
     git \
     mimalloc2-dev \
+    tini-static \
     build-base \
     ca-certificates \
     linux-headers \
@@ -123,11 +124,14 @@ RUN set -e \
 FROM scratch
 COPY --from=builder /etc/passwd /etc/passwd
 COPY --from=builder /etc/group /etc/group
+COPY --from=builder /sbin/tini-static /sbin/tini
 COPY --from=builder /tmp /tmp
 COPY --from=builder --chown=nginx:nginx /usr/sbin/nginx /usr/sbin/nginx
 COPY --from=builder --chown=nginx:nginx /etc/nginx /etc/nginx
 COPY --chown=nginx:nginx ./nginx.conf /etc/nginx/nginx.conf
 COPY --chown=nginx:nginx ./default.conf /etc/nginx/conf.d/default.conf
+
+ENTRYPOINT [ "/sbin/tini", "--" ]
 
 EXPOSE 8080/tcp 8443/tcp 8443/udp
 LABEL description="Distroless NGINX with HTTP/3, QUIC and PQC support🚀" \
