--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,6 @@ name: Build📦
 
 on:
   workflow_dispatch:
-  # schedule:
-  # - cron: "00 12 1 * *"
-  # push:
-  #   branches: ["main"]
 
 env:
   REGISTRY: ghcr.io
@@ -66,39 +62,18 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Extract Docker metadata🔬
-        id: meta
-        uses: docker/metadata-action@v5.9.0
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          labels: |
-            description="Distroless NGINX with HTTP/3, QUIC and PQC support🚀"
-            maintainer="ammnt <admin@msftcnsi.com>"
-            org.opencontainers.image.description="Distroless NGINX with HTTP/3, QUIC and PQC support🚀"
-            org.opencontainers.image.authors="ammnt, admin@msftcnsi.com"
-            org.opencontainers.image.title="Distroless NGINX with HTTP/3, QUIC and PQC support🚀"
-            org.opencontainers.image.source="https://github.com/ammnt/nginx/"
-            org.opencontainers.image.created=${{ env.BUILD_DATE }}
-            org.opencontainers.image.documentation="https://github.com/ammnt/nginx/blob/main/README.md"
-            org.opencontainers.image.licenses="BSD-2-Clause License"
-            org.opencontainers.image.url="https://msftcnsi.com"
-            org.opencontainers.image.version=${{ env.APP_VERSION }}
-
       - name: Build the Docker image⛓️
-        id: build
         uses: docker/build-push-action@v6.18.0
         env:
-          DOCKER_CONTENT_TRUST: 1
-          DOCKER_BUILD_RECORD_UPLOAD: false
           DOCKER_BUILDKIT: 1
+          BUILDKIT_PROGRESS: plain
+          DOCKER_BUILD_RECORD_UPLOAD: false
         with:
           provenance: false
           context: .
           file: ./Dockerfile.template
           platforms: linux/amd64
-          load: ${{ github.event_name != 'pull_request' }}
           tags: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
-          labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
@@ -109,39 +84,26 @@ jobs:
             PCRE_VERSION=${{ env.PCRE_VERSION }}
             ZLIB_VERSION=${{ env.ZLIB_VERSION }}
 
-      # - name: Slim the Docker image🚀
-      #   id: slim
-      #   uses: kitabisa/docker-slim-action@v1.2.0
-      #   env:
-      #     DSLIM_HTTP_PROBE: false
-      #   with:
-      #     target: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
-      #     tag: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
-      #     overwrite: true
-      #     version: 1.40.11
-
-      - name: Slim the Docker image🚀
+      - name: Slim and test the Docker image🚀
         run: |
-          curl -L -o ds.tar.gz https://github.com/mintoolkit/mint/releases/download/${{ env.MINT_VERSION }}/dist_linux.tar.gz
-          tar -xvf ds.tar.gz
+          curl -sSL -o ds.tar.gz https://github.com/mintoolkit/mint/releases/download/${{ env.MINT_VERSION }}/dist_linux.tar.gz
+          tar -xf ds.tar.gz
           ./dist_linux/mint build \
             --target ghcr.io/ammnt/nginx:${{ env.APP_VERSION }} \
             --tag ghcr.io/ammnt/nginx:${{ env.APP_VERSION }} \
             --http-probe=false \
             --continue-after=5
+          docker run -d --rm -p 127.0.0.1:8080:8080/tcp ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
+          sleep 10 && docker ps -a
+          curl -sSI http://127.0.0.1:8080 || exit 1
 
-      - name: Explore the Docker image and test with Dive🔍
-        timeout-minutes: 2
+      - name: Explore the Docker image with Dive🔍
         env:
           CI: true
         run: |
           wget -q https://github.com/wagoodman/dive/releases/download/v${{ env.DIVE_VERSION }}/dive_${{ env.DIVE_VERSION }}_linux_amd64.tar.gz
-          tar xvzf dive_${{ env.DIVE_VERSION }}_linux_amd64.tar.gz -C /usr/local/bin
+          tar xzf dive_${{ env.DIVE_VERSION }}_linux_amd64.tar.gz -C /usr/local/bin
           dive --ci-config "${{ github.workspace }}/.dive-ci/" ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
-          docker run -d --name nginx --rm -p 127.0.0.1:8080:8080/tcp ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
-          sleep 10
-          docker ps -a
-          curl -i http://127.0.0.1:8080 || exit 1
 
       - name: Analyze image with Docker Scout💊
         uses: docker/scout-action@v1.18.2
@@ -149,7 +111,8 @@ jobs:
           command: cves,sbom
           image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           sarif-file: ${{ github.workspace }}/scout.report.json
-          summary: false
+          write-comment: true
+          github-token: ${{ secrets.GH_TOKEN }}
 
       - name: Analyze image with Trivy💊
         uses: aquasecurity/trivy-action@0.33.1
@@ -163,7 +126,6 @@ jobs:
           github-pat: ${{ secrets.GH_TOKEN }}
 
       - name: Analyze image with Grype💊
-        id: anchore
         uses: anchore/scan-action@v7.2.0
         with:
           image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
